--- a/package.json
+++ b/package.json
@@ -9,21 +9,32 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "15.0.2",
-    "fumadocs-ui": "14.2.1",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@tabler/icons": "^3.21.0",
+    "@types/prismjs": "^1.26.5",
+    "clsx": "^2.1.1",
+    "devicon": "^2.16.0",
+    "framer-motion": "^11.11.11",
     "fumadocs-core": "14.2.1",
+    "fumadocs-docgen": "^1.3.2",
+    "fumadocs-mdx": "11.1.1",
+    "fumadocs-ui": "14.2.1",
+    "next": "15.0.2",
+    "nuqs": "^2.1.1",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "11.1.1"
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
-    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
