--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@tabler/icons": "^3.21.0",
     "@types/prismjs": "^1.26.5",
+    "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "devicon": "^2.16.0",
     "framer-motion": "^11.11.11",
@@ -24,6 +25,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
