feat:added guestbook

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
+# Do not expose your Neon credentials to the browser
 
+DATABASE_URL='postgresql://neondb_owner:dfawk5TX1ivm@ep-falling-meadow-a1ie5wvi.ap-southeast-1.aws.neon.tech/neondb?sslmode=require'
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Ym9zcy1ob3JzZS03LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_awLZbNvOVcLQ9f02t9trtm4ubMzpgauB554pbcNkT3
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
