--- a/package.json
+++ b/package.json
@@ -6,27 +6,44 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
+    "db:push": "drizzle-kit push --config=drizzle.config.ts",
+    "db:migrate": "tsx ./src/db/migrate.ts",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:studio": "drizzle-kit studio",
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.2.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@neondatabase/serverless": "^0.10.3",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
-    "@tabler/icons": "^3.21.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@types/prismjs": "^1.26.5",
+    "class-variance-authority": "^0.7.0",
     "clipboard-copy": "^4.0.1",
     "clsx": "^2.1.1",
     "devicon": "^2.16.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.36.1",
     "framer-motion": "^11.11.11",
     "fumadocs-core": "14.2.1",
     "fumadocs-docgen": "^1.3.2",
     "fumadocs-mdx": "11.1.1",
     "fumadocs-ui": "14.2.1",
+    "lucide-react": "^0.454.0",
     "next": "15.0.2",
-    "nuqs": "^2.1.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "sugar-high": "^0.7.5",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -35,6 +52,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.28.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
